--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "db:push": "drizzle-kit push:pg --config drizzle.config.ts"
   },
   "dependencies": {
+    "@auth/drizzle-adapter": "^1.0.1",
     "@neondatabase/serverless": "^0.9.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -18,6 +19,7 @@
     "drizzle-orm": "^0.30.10",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
+    "next-auth": "^5.0.0-beta.16",
     "pg": "^8.11.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
