--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "db:generate": "drizzle-kit generate drizzle.config.ts",
-    "db:push": "drizzle-kit push drizzle.config.ts"
+    "db:generate": "drizzle-kit generate:pg --config drizzle.config.ts",
+    "db:push": "drizzle-kit push:pg --config drizzle.config.ts"
   },
   "dependencies": {
-    "@auth/drizzle-adapter": "^1.0.1",
+    "@types/pg": "^8.11.5",
+    "@auth/drizzle-adapter": "^1.2.0",
     "@hookform/resolvers": "^3.3.4",
     "@neondatabase/serverless": "^0.9.1",
     "@paralleldrive/cuid2": "^2.2.2",
@@ -26,12 +27,12 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
-    "drizzle-orm": "^0.30.10",
+    "drizzle-orm": "^0.30.9",
     "framer-motion": "^11.2.10",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
-    "next-auth": "^5.0.0-beta.16",
+    "next-auth": "^5.0.0-beta.19",
     "next-safe-action": "^6.2.0",
     "next-themes": "^0.3.0",
     "pg": "^8.11.5",
@@ -43,13 +44,14 @@
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.10.4",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "postgres": "^3.4.4"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "drizzle-kit": "^0.21.1",
+    "drizzle-kit": "^0.20.17",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
