styled login a little

--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "db:push": "drizzle-kit push:pg --config drizzle.config.ts"
   },
   "dependencies": {
-    "@types/pg": "^8.11.5",
     "@auth/drizzle-adapter": "^1.2.0",
     "@hookform/resolvers": "^3.3.4",
     "@neondatabase/serverless": "^0.9.1",
@@ -19,9 +18,11 @@
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@types/bcrypt": "^5.0.2",
+    "@types/pg": "^8.11.5",
     "@uploadthing/react": "^6.5.4",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
@@ -36,6 +37,7 @@
     "next-safe-action": "^6.2.0",
     "next-themes": "^0.3.0",
     "pg": "^8.11.5",
+    "postgres": "^3.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.4",
@@ -44,8 +46,7 @@
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.10.4",
-    "zod": "^3.23.8",
-    "postgres": "^3.4.4"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
