refactoring code with responsive sidebar

--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-radio-group": "^1.2.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
+    "@rewind-ui/core": "^0.19.11",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.13",
     "@tanstack/react-query": "^5.44.0",
     "@tanstack/react-query-devtools": "^5.44.0",
     "@tanstack/react-table": "^8.17.3",
@@ -52,6 +56,7 @@
     "resend": "^3.2.0",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.10.4",
     "zod": "^3.23.8",
