--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-query": "^3.39.3",
     "resend": "^3.2.0",
     "sonner": "^1.4.41",
+    "stripe": "^16.2.0",
     "tailwind-merge": "^2.3.0",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
